--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/lab": "^5.0.0-alpha.172",
     "@mui/material": "^5.16.1",
     "@mui/x-data-grid": "^7.10.0",
+    "@mui/x-date-pickers": "^7.13.0",
     "axios": "^1.7.2",
     "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.12",
     "framer-motion": "^11.3.2",
     "immer": "^10.1.1",
     "react": "^18.3.1",
