--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "framer-motion": "^11.3.2",
     "immer": "^10.1.1",
     "react": "^18.3.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
     "recoil": "^0.7.7",
