update mui versions

--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^5.16.1",
-    "@mui/lab": "^5.0.0-alpha.172",
-    "@mui/material": "^5.16.7",
-    "@mui/x-data-grid": "^7.10.0",
-    "@mui/x-date-pickers": "^7.13.0",
+    "@mui/icons-material": "^6.1.0",
+    "@mui/lab": "^6.0.0-beta.9",
+    "@mui/material": "^6.1.0",
+    "@mui/x-data-grid": "^7.17.0",
+    "@mui/x-date-pickers": "^7.17.0",
     "axios": "^1.7.2",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.12",
