--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@mui/x-date-pickers": "^7.17.0",
     "axios": "^1.7.2",
     "crypto-js": "^4.2.0",
-    "dayjs": "^1.11.12",
+    "dayjs": "^1.11.13",
+    "dayjs-plugin-utc": "^0.1.2",
+    "dayjs-timezone-iana-plugin": "^0.1.0",
     "framer-motion": "^11.3.2",
     "immer": "^10.1.1",
     "react": "^18.3.1",
