--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/icons-material": "^6.1.0",
     "@mui/lab": "^6.0.0-beta.9",
     "@mui/material": "^6.1.0",
+    "@mui/x-charts": "^7.20.0",
     "@mui/x-data-grid": "^7.17.0",
     "@mui/x-date-pickers": "^7.17.0",
     "axios": "^1.7.2",
@@ -26,6 +27,7 @@
     "dayjs": "^1.11.13",
     "dayjs-plugin-utc": "^0.1.2",
     "dayjs-timezone-iana-plugin": "^0.1.0",
+    "firebase": "^10.14.1",
     "framer-motion": "^11.3.2",
     "i18next": "^23.15.2",
     "i18next-browser-languagedetector": "^8.0.0",
