--- a/package.json
+++ b/package.json
@@ -33,15 +33,18 @@
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.2",
     "immer": "^10.1.1",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.0.2",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.24.1",
     "recoil": "^0.7.7",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
+    "@types/leaflet": "^1.9.14",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
