--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.2",
     "immer": "^10.1.1",
+    "jsencrypt": "^3.3.2",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
